<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ronensabag.animationsandgestures.propertyAnimation.InterpolatorFragment"
    >

  <ImageView
      android:id="@+id/accelerate"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:src="@drawable/ic_directions_walk_black_24dp"
      android:contentDescription="@string/accelerate_interpolator_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <ImageView
      android:id="@+id/decelerate"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:src="@drawable/ic_directions_bike_black_24dp"
      android:contentDescription="@string/decelerate_interpolator_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/accelerate"
      />
  <ImageView
      android:id="@+id/accelerateDecelerate"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:src="@drawable/ic_rowing_black_24dp"
      android:contentDescription="@string/accelerate_decelerate_interpolator_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/decelerate"
      />
  <ImageView
      android:id="@+id/overshot"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:src="@drawable/ic_accessible_black_24dp"
      android:contentDescription="@string/overshot_interpolator_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/accelerateDecelerate"
      />
  <ImageView
      android:id="@+id/bounce"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:src="@drawable/ic_directions_run_black_24dp"
      android:contentDescription="@string/bounce_interpolator_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/overshot"
      />
  <Button
      android:id="@+id/start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:text="@string/start"
      android:textColor="@color/colorAccent"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/bounce"
      style="@style/BorderlessButton"
      />
</android.support.constraint.ConstraintLayout>