<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ronensabag.animationsandgestures.screenSelector.ScreenSelectorActivity"
    >

  <TextView
      android:id="@+id/touchScreenText"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#90CAF9"
      android:gravity="center"
      android:onClick="onClick"
      android:text="@string/android_touch_system"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/verticalGuideline"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      />
  <TextView
      android:id="@+id/scrollScreenText"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#64B5F6"
      android:gravity="center"
      android:onClick="onClick"
      android:paddingEnd="8dp"
      android:paddingStart="8dp"
      android:text="@string/scroll_detector"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="@+id/verticalGuideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      />
  <TextView
      android:id="@+id/animationScreenText"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#42A5F5"
      android:gravity="center"
      android:onClick="onClick"
      android:text="@string/property_animation"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/verticalGuideline"
      app:layout_constraintTop_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintVertical_bias="0.0"
      />
  <TextView
      android:id="@+id/scrollAnimationScreenText"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#2196F3"
      android:gravity="center"
      android:onClick="onClick"
      android:text="@string/final_work"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="@+id/verticalGuideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@+id/horizontalGuideline"
      />
  <ImageView
      android:id="@+id/touchScreenIcon"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:alpha="0"
      android:contentDescription="@string/touch_screen_icon"
      app:srcCompat="@drawable/ic_touch_app_black_24dp"
      app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintEnd_toEndOf="@+id/touchScreenText"
      app:layout_constraintStart_toStartOf="@+id/touchScreenText"
      app:layout_constraintTop_toTopOf="@+id/touchScreenText"
      app:layout_constraintVertical_bias="0.88"
      />
  <ImageView
      android:id="@+id/scrollScreenIcon"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:alpha="0"
      android:contentDescription="@string/scroll_screen_icon"
      app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
      app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintEnd_toEndOf="@+id/scrollScreenText"
      app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
      app:layout_constraintTop_toTopOf="@+id/scrollScreenText"
      app:layout_constraintVertical_bias="0.88"
      />
  <ImageView
      android:id="@+id/animationScreenIcon"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:alpha="0"
      android:contentDescription="@string/animation_screen_icon"
      app:srcCompat="@drawable/ic_timeline_black_24dp"
      app:layout_constraintBottom_toBottomOf="@+id/animationScreenText"
      app:layout_constraintEnd_toStartOf="@+id/scrollAnimationScreenText"
      app:layout_constraintStart_toStartOf="@+id/animationScreenText"
      app:layout_constraintTop_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintVertical_bias="0.88"
      />
  <ImageView
      android:id="@+id/scrollAnimationScreenIcon"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:alpha="0"
      android:contentDescription="@string/scroll_animation_screen_icon"
      app:srcCompat="@drawable/ic_create_black_24dp"
      app:layout_constraintBottom_toBottomOf="@+id/scrollAnimationScreenText"
      app:layout_constraintEnd_toEndOf="@+id/scrollAnimationScreenText"
      app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
      app:layout_constraintTop_toTopOf="@+id/horizontalGuideline"
      app:layout_constraintVertical_bias="0.88"
      />
  <android.support.constraint.Guideline
      android:id="@+id/verticalGuideline"
      android:layout_width="1dp"
      android:layout_height="1dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"
      />
  <android.support.constraint.Guideline
      android:id="@+id/horizontalGuideline"
      android:layout_width="1dp"
      android:layout_height="1dp"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.5"
      />
</android.support.constraint.ConstraintLayout>
