<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/final_work_expend_view_min_height"
    android:layout_gravity="center"
    android:background="#d9dbdc"
    tools:context="com.example.ronensabag.animationsandgestures.propertyAnimation.InterpolatorFragment"
    >

  <TextView
      android:id="@+id/topButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|center_vertical"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorPrimary"
      android:padding="8dp"
      android:text="@string/please_checkout_what"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/bottomButton"
      app:layout_constraintStart_toStartOf="parent"
      />
  <TextView
      android:id="@+id/bottomButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start|center_vertical"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorPrimaryDark"
      android:padding="8dp"
      android:text="@string/coming_from_me"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
  <ImageView
      android:id="@+id/middleImage"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:alpha="0"
      android:src="@drawable/ic_android_black_24dp"
      android:tint="@color/colorAccent"
      android:contentDescription="@string/middle_image"
      app:layout_constraintBottom_toBottomOf="@+id/bottomButton"
      app:layout_constraintStart_toStartOf="@+id/bottomButton"
      />
  <View
      android:id="@+id/middleLeftView"
      android:layout_width="4dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:alpha="0"
      android:background="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="@+id/bottomButton"
      app:layout_constraintStart_toStartOf="parent"
      />
  <View
      android:id="@+id/middleRightView"
      android:layout_width="4dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:alpha="0"
      android:background="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="@+id/bottomButton"
      app:layout_constraintStart_toEndOf="@+id/middleImage"
      />
</android.support.constraint.ConstraintLayout>