<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ronensabag.animationsandgestures.touchSystem.TouchSystemActivity"
    tools:showIn="@layout/activity_touch_system"
    >

  <com.example.ronensabag.animationsandgestures.touchSystem.TrackPadView
      android:id="@+id/trackPad"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:background="@color/colorAccent"
      android:gravity="center"
      android:text="@string/touch_me"
      android:textSize="30sp"
      android:textColor="#ffffff"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintTop_toTopOf="parent"
      />
  <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#ffffff"
      android:elevation="6dp"
      app:layout_constraintBottom_toTopOf="@+id/event_list"
      app:layout_constraintTop_toBottomOf="@+id/trackPad"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
  <Switch
      android:id="@+id/switchLogs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="8dp"
      android:elevation="13dp"
      android:text="@string/switch_default_title"
      android:textColor="#000000"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintLeft_toLeftOf="@+id/event_list"
      app:layout_constraintRight_toRightOf="@+id/event_list"
      app:layout_constraintTop_toBottomOf="@+id/trackPad"
      />
  <ImageButton
      android:id="@+id/deleteLogs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:elevation="14dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/delete_logs"
      android:tint="#706d6d"
      app:layout_constraintBottom_toTopOf="@+id/event_list"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/switchLogs"
      app:layout_constraintTop_toBottomOf="@+id/trackPad"
      app:srcCompat="@android:drawable/ic_menu_delete"
      />
  <android.support.v7.widget.RecyclerView
      android:id="@+id/event_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layoutManager="android.support.v7.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/switchLogs"
      />

</android.support.constraint.ConstraintLayout>
