<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ronensabag.animationsandgestures.propertyAnimation.InterpolatorFragment"
    app:layout_behavior="@null"
    >

  <TextView
      android:id="@+id/topButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|center_vertical"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorPrimary"
      android:padding="8dp"
      android:text="@string/please_checkout_what"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/bottomButton"
      app:layout_constraintStart_toStartOf="parent"
      />
  <TextView
      android:id="@+id/bottomButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start|center_vertical"
      android:layout_marginBottom="64dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorPrimaryDark"
      android:padding="8dp"
      android:text="@string/coming_from_me"
      android:textColor="@android:color/white"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
  <Button
      android:id="@+id/start"
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:elevation="30dp"
      android:background="@drawable/ic_play_arrow_black_24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <ImageView
      android:id="@+id/middleImage"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:alpha="0"
      android:src="@drawable/ic_android_black_24dp"
      android:tint="@color/colorAccent"
      android:contentDescription="@string/middle_image"
      app:layout_constraintBottom_toBottomOf="@+id/bottomButton"
      app:layout_constraintStart_toStartOf="@+id/bottomButton"
      />
  <View
      android:id="@+id/middleLeftView"
      android:layout_width="4dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:alpha="0"
      android:background="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="@+id/bottomButton"
      app:layout_constraintStart_toStartOf="parent"
      />
  <View
      android:id="@+id/middleRightView"
      android:layout_width="4dp"
      android:layout_height="64dp"
      android:layout_marginStart="16dp"
      android:alpha="0"
      android:background="@color/colorAccent"
      app:layout_constraintStart_toEndOf="@+id/middleImage"
      app:layout_constraintBottom_toBottomOf="@+id/bottomButton"
      tools:layout_editor_absoluteY="447dp"
      />
</android.support.constraint.ConstraintLayout>